--- a/app/views/homes/top.html.erb
+++ b/app/views/homes/top.html.erb
@@ -1,2 +1,10 @@
-<h1>Homes#top</h1>
-<p>Find me in app/views/homes/top.html.erb</p>
+<h1>welcome to Bookers !!</h1>
+<p>In Bookers,
+
+you can share and exchange your opinions , inpressions , and emotions<br>
+
+about various books!</p>
+
+<!--ログインとサインアップボタン-->
+
+<!--ヘッダーには、ホーム、アバウト、サインアップ、ログイン-->
