--- a/app/views/homes/top.html.erb
+++ b/app/views/homes/top.html.erb
@@ -6,5 +6,10 @@ you can share and exchange your opinions , inpressions , and emotions<br>
 about various books!</p>
 
 <!--ログインとサインアップボタン-->
-
+<li>
+  <%= link_to "Sign up", new_user_registration_path %>
+</li>
+<li>
+   <%= link_to "Log in ", new_user_session_path %>
+</li>
 <!--ヘッダーには、ホーム、アバウト、サインアップ、ログイン-->
