--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -2,6 +2,12 @@
 
 <%= form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f| %>
   <%= render "devise/shared/error_messages", resource: resource %>
+  
+  <!--ユーザ名・メール・パスワードで、ユーザの新規登録-->
+  <div class="field">
+  <%= f.label :username %><br>
+  <%= f.text_field :name %>
+  </div>
 
   <div class="field">
     <%= f.label :email %><br />
