--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -14,6 +14,38 @@
   </head>
 
   <body>
+    <header>
+      <h1>Bookers</h1>
+      <!--ログインしている場合-->
+      <% if user_signed_in? %>
+        <li>
+          <%= link_to "Home", new_user_registration_path %>
+        </li>
+        <li>
+          <%= link_to "Users", new_user_registration_path %>
+        </li>
+        <li>
+          <%= link_to "Books", new_user_registration_path %>
+        </li>
+        <li>
+          <%= link_to "Log out", destroy_user_session_path, method: :delete %>
+        </li>
+      <% else %>
+      <!--ログインしていない場合-->
+        <li>
+          <%= link_to "Home", root_path %>
+        </li>
+        <li>
+          <%= link_to "About", homes_about_path %>
+        </li>
+        <li>
+          <%= link_to "Sign up", new_user_registration_path %>
+        </li>
+        <li>
+          <%= link_to "Log in ", new_user_session_path %>
+        </li>
+      <% end %>
+    </header>
     <%= yield %>
   </body>
 </html>
