--- a/app/views/books/index.html.erb
+++ b/app/views/books/index.html.erb
@@ -1,5 +1,6 @@
 books index(/books)
 <!--ユーザー情報-->
+<h1>User info</h1>
 <div>
   <%= image_tag @user.get_profile_image(100,100) %>
 </div>
@@ -27,13 +28,30 @@ books index(/books)
 <% end %>
 
 <!--ここから右ページ-->
-<h1>投稿一覧</h1>
+<h1>Books</h1>
+<table>
+  <thead>
+    <tr>
+      <th>
+        title
+      </th>
+      <th>
+        body
+      </th>
+    </tr>
+  </thead>
 
-<% @books.each do |book| %>
-
-  <p>title</p>
-  <span><%= book.title %></span>
-  
-  <p>body</p>
-  <span><%= book.body %></span>
-<% end %>
+  <tbody>
+    <% @books.each do |book| %>
+    <tr>
+      <td>
+        <%= link_to book.title, book_path(book.id) %>
+        <!--遷移先はbooksのshowページ　/books/id-->
+      </td>
+      <td>
+        <%= book.body %>
+      </td>
+    </tr>
+    <% end %>
+  </tbody>
+</table>
