--- a/app/views/books/index.html.erb
+++ b/app/views/books/index.html.erb
@@ -32,6 +32,7 @@ books index(/books)
 <table>
   <thead>
     <tr>
+      <th colspan="1"></th>
       <th>
         title
       </th>
@@ -44,6 +45,9 @@ books index(/books)
   <tbody>
     <% @books.each do |book| %>
     <tr>
+      <td>
+      <%= image_tag @user.get_profile_image(100,100) %>
+      </td>
       <td>
         <%= link_to book.title, book_path(book.id) %>
         <!--遷移先はbooksのshowページ　/books/id-->
