--- a/app/views/books/index.html.erb
+++ b/app/views/books/index.html.erb
@@ -1,31 +1,7 @@
 books index(/books)
-<!--ユーザー情報-->
-<h1>User info</h1>
-<div>
-  <%= image_tag @user.get_profile_image(100,100) %>
-</div>
 
-<h4>name</h4>
-<p><%= @user.name %></p>
-
-<h4>introduction</h4>
-<p><%= @user.introduction %></p>
-
-<%= link_to 'edit', edit_user_path(current_user.id) %>
-
-
-<!--投稿フォーム-->
-<h1>New book</h1>
-<%= form_with model: Book.new do |f| %>
-  <h4>title</h4>
-  <%= f.text_field :title %>
-	
-  <h4>body</h4>
-  <%= f.text_area :body %>
-	
-	<br>
-  <%= f.submit '投稿' %>
-<% end %>
+<!--テンプレートファイルを呼び出す-->
+<%= render 'list', user:@user %>
 
 <!--ここから右ページ-->
 <h1>Books</h1>
