--- a/app/views/books/edit.html.erb
+++ b/app/views/books/edit.html.erb
@@ -1,1 +1,19 @@
-books edit(/books/book_id/edit)
+books edit(/books/book_id/edit
+<h1>Editing Book</h1>
+
+<%= form_with model: @book do |f| %>
+ <p>
+  <label for="inputTitle">title</label>
+  <%= f.text_field :title, autofocus: true, id:"inputTitle", placeholder:"title"%>
+ </p> 
+ <p>
+   <label for="inputBody">body</label>
+  <%= f.text_area :body, autofocus: true, id:"inputBody", placeholder:"body"%>
+ </p>
+ <p>
+  <%= f.submit "Update Book" %>
+  </p>
+<% end %>
+
+
+show back
