--- a/app/views/books/edit.html.erb
+++ b/app/views/books/edit.html.erb
@@ -15,5 +15,5 @@ books edit(/books/book_id/edit
   </p>
 <% end %>
 
-
-show back
+<%= link_to 'Show', book_path %>
+<%= link_to 'Back', books_path %>
