--- a/app/views/users/edit.html.erb
+++ b/app/views/users/edit.html.erb
@@ -1,1 +1,17 @@
 users edit(users/id/edit)
+<h1>User info</h1>
+<%= form_with model: User do |f| %>
+　<p>
+  <label for="inputName">Name</label>
+  <%= f.text_field :name, autofocus: true, id:"inputName"%>
+  </p>
+  <p>
+  <label for="inputImage">ProfileImage</label>
+  <%= f.file_field :image, accept: "image/*" %>  
+  </p>
+  <p>
+  <label for="inputBody">Introduction</label>
+  <%= f.text_area :body, autofocus: true, id:"inputBody"%>
+  </p>
+ <p><%= f.submit "Update User" %></p>
+<% end %>
