--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,8 +1,39 @@
 users show(/users/id)
-<h2>name</h2>
-<p><%= @user.name %></p>
+<!--左側ページ-->
+<!--テンプレートファイルを呼び出す-->
+<%= render 'books/list', user:@user %>
 
-<h2>introduction</h2>
-<p><%= @user.introduction %></p>
+<!--右側ページ-->
+<!--そのユーザーの投稿履歴-->
+<h1>Books</h1>
+<table>
+  <thead>
+    <tr>
+      <th colspan="1"></th>
+      <th>
+        title
+      </th>
+      <th>
+        body
+      </th>
+    </tr>
+  </thead>
 
-editボタン
+  <tbody>
+    <% @books.each do |book| %>
+    <tr>
+      <td>
+      <%= image_tag @user.get_profile_image(100,100) %>
+      </td>
+      <td>
+        <%= link_to book.title, book_path(book.id) %>
+        <!--遷移先はbooksのshowページ　/books/id-->
+      </td>
+      <td>
+        <%= book.body %>
+      </td>
+    </tr>
+    <% end %>
+  </tbody>
+</table>
+
