--- a/app/views/books/_list.html.erb
+++ b/app/views/books/_list.html.erb
@@ -5,7 +5,7 @@
 <!--ユーザー情報-->
 <h1>User info</h1>
 <div>
-  <%= image_tag user.get_profile_image(100,100) %>
+  <%= image_tag user.get_image(100,100) %>
 </div>
 
 <h4>name</h4>
