--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -8,7 +8,7 @@ users index(/users)
 <h1>Users</h1>
 <% @users.each do |user| %>
  <p>
- <%= image_tag @user.get_image(100,100) %>
+ <%= image_tag user.get_image(100,100) %>
  </p>
  <h2>name</h2>
  <span><%= user.name %></span>
