--- a/app/views/books/edit.html.erb
+++ b/app/views/books/edit.html.erb
@@ -1,28 +1,45 @@
 books edit(/books/book_id/edit
-<h1>Editing Book</h1>
-<!--投稿の更新失敗バリデーション-->
-<% if @book.errors.any? %>
-  <%= @book.errors.count %>errors
-  <ul>
-    <% @book.errors.full_messages.each do |message| %>
-      <li><%= message %></li>
+<body>
+  <header>
+    
+  </header>
+  <main>
+    <h1>Editing Book</h1>
+    <!--投稿の更新失敗バリデーション-->
+    <% if @book.errors.any? %>
+      <%= @book.errors.count %>errors
+      <ul>
+        <% @book.errors.full_messages.each do |message| %>
+          <li><%= message %></li>
+        <% end %>
+      </ul>
     <% end %>
-  </ul>
-<% end %>
+    <!--更新投稿フォーム-->
+    <%= form_with model: @book do |f| %>
+     <p>
+      <label for="inputTitle">title</label>
+      <%= f.text_field :title, autofocus: true, id:"inputTitle", placeholder:"title"%>
+     </p> 
+     <p>
+       <label for="inputBody">body</label>
+      <%= f.text_area :body, autofocus: true, id:"inputBody", placeholder:"body"%>
+     </p>
+     <p>
+      <%= f.submit "Update Book" %>
+      </p>
+    <% end %>
+    
+    <%= link_to 'Show', book_path %>
+    <%= link_to 'Back', books_path %>
+  </main>
 
-<%= form_with model: @book do |f| %>
- <p>
-  <label for="inputTitle">title</label>
-  <%= f.text_field :title, autofocus: true, id:"inputTitle", placeholder:"title"%>
- </p> 
- <p>
-   <label for="inputBody">body</label>
-  <%= f.text_area :body, autofocus: true, id:"inputBody", placeholder:"body"%>
- </p>
- <p>
-  <%= f.submit "Update Book" %>
-  </p>
-<% end %>
-
-<%= link_to 'Show', book_path %>
-<%= link_to 'Back', books_path %>
+  <footer>
+    <div class="container mt-5">
+     <div class="row">
+      <div class="mx-auto">
+       <p>CopyRight Infratop.inc</p>
+      </div>
+     </div>
+    </div>
+  </footer>
+</body>
