--- a/app/views/books/index.html.erb
+++ b/app/views/books/index.html.erb
@@ -1,45 +1,62 @@
 books index(/books)
-<!--新規投稿失敗バリデーション-->
-<% if @book.errors.any? %>
-  <%= @book.errors.count %>errors
-  <ul>
-    <% @book.errors.full_messages.each do |message| %>
-      <li><%= message %></li>
-    <% end %>
-  </ul>
-<% end %>
-<!--テンプレートファイルを呼び出す-->
-<%= render 'list', user: @user %>
+<body>
+  <header>
+    
+  </header>
+  <main>
+  <!--新規投稿失敗バリデーション-->
+  <% if @book.errors.any? %>
+    <%= @book.errors.count %>errors
+    <ul>
+      <% @book.errors.full_messages.each do |message| %>
+        <li><%= message %></li>
+      <% end %>
+    </ul>
+  <% end %>
+  <!--テンプレートファイルを呼び出す-->
+  <%= render 'list', user: @user %>
+  
+  <!--ここから右ページ-->
+  <h1>Books</h1>
+  <table>
+    <thead>
+      <tr>
+        <th colspan="1"></th>
+        <th>
+          title
+        </th>
+        <th>
+          body
+        </th>
+      </tr>
+    </thead>
+  
+    <tbody>
+      <% @books.each do |book| %>
+      <tr>
+        <td>
+        <%= image_tag book.user.get_image(100,100) %>
+        </td>
+        <td>
+          <%= link_to book.title, book_path(book.id) %>
+          <!--遷移先はbooksのshowページ　/books/id-->
+        </td>
+        <td>
+          <%= book.body %>
+        </td>
+      </tr>
+      <% end %>
+    </tbody>
+  </table>
+  </main>
 
-<!--ここから右ページ-->
-<h1>Books</h1>
-<table>
-  <thead>
-    <tr>
-      <th colspan="1"></th>
-      <th>
-        title
-      </th>
-      <th>
-        body
-      </th>
-    </tr>
-  </thead>
-
-  <tbody>
-    <% @books.each do |book| %>
-    <tr>
-      <td>
-      <%= image_tag book.user.get_image(100,100) %>
-      </td>
-      <td>
-        <%= link_to book.title, book_path(book.id) %>
-        <!--遷移先はbooksのshowページ　/books/id-->
-      </td>
-      <td>
-        <%= book.body %>
-      </td>
-    </tr>
-    <% end %>
-  </tbody>
-</table>
+  <footer>
+    <div class="container mt-5">
+     <div class="row">
+      <div class="mx-auto">
+       <p>CopyRight Infratop.inc</p>
+      </div>
+     </div>
+    </div>
+   </footer>
+ </body>
