--- a/app/views/books/show.html.erb
+++ b/app/views/books/show.html.erb
@@ -1,38 +1,52 @@
 books show(/books/book_id)
-<!--新規投稿成功、投稿更新成功フラッシュメッセージ-->
-<div>
-  <%= flash[:notice] %>
-</div>
-<!--左側ページ-->
-<!--テンプレートファイルを呼び出す-->
- <%= render 'list', user:@user %>
+<body>
+ <header>
+     
+ </header>
+ <main>
+ <!--新規投稿成功、投稿更新成功フラッシュメッセージ-->
+  <div>
+   <%= flash[:notice] %>
+  </div>
+ <!--左側ページ-->
+ <!--テンプレートファイルを呼び出す-->
+  <%= render 'list', user:@user %>
 
-<!--右側ページ-->
-<h1>Books</h1>
+ <!--右側ページ-->
+  <h1>Books</h1>
 
-<p><%= image_tag @user.get_image(100,100) %></p>
+  <p><%= image_tag @user.get_image(100,100) %></p>
 
-</p><%= link_to @user.name, user_path(@user.id) %></p>
+  </p><%= link_to @user.name, user_path(@user.id) %></p>
 
-<h2>title</h2>
-<p><%= @book.title %></p>
+  <h2>title</h2>
+  <p><%= @book.title %></p>
 
-<h2>body</h2>
-<p><%= @book.body %></p>
-
-
+  <h2>body</h2>
+  <p><%= @book.body %></p>
 
 <!--editとdestroy-->
- <span>
+   <span>
     <% if @book.user == current_user %>
     <%= link_to "Edit",edit_book_path(@book) %>
     <% end %>
-  </span>
+   </span>
 
-  <span>
+   <span>
     <% if @book.user == current_user %>
     <%= link_to "Destroy",book_path(@book), method: :delete, "data-confirm"=>"本当に消しますか？" %>
     <% end %>
-  </span>
+   </span>
+  </main>
   
+  <footer>
+    <div class="container mt-5">
+     <div class="row">
+      <div class="mx-auto">
+       <p>CopyRight Infratop.inc</p>
+      </div>
+     </div>
+    </div>
+  </footer>
+</body>
  
