--- a/app/views/users/edit.html.erb
+++ b/app/views/users/edit.html.erb
@@ -1,27 +1,43 @@
 users edit(users/id/edit)
-<h1>User info</h1>
-<!--ユーザーのプロフィール更新失敗バリデーション-->
-<% if @user.errors.any? %>
-  <%= @user.errors.count %>errors
-  <ul>
-    <% @user.errors.full_messages.each do |message| %>
-      <li><%= message %></li>
+<body>
+  <header>
+    
+  </header>
+  <main>
+    <h1>User info</h1>
+    <!--ユーザーのプロフィール更新失敗バリデーション-->
+    <% if @user.errors.any? %>
+      <%= @user.errors.count %>errors
+      <ul>
+        <% @user.errors.full_messages.each do |message| %>
+          <li><%= message %></li>
+        <% end %>
+      </ul>
     <% end %>
-  </ul>
-<% end %>
-
-<%= form_with model: @user do |f| %>
-　<p>
-  <label for="inputName">Name</label>
-  <%= f.text_field :name, autofocus: true, id:"inputName"%>
-  </p>
-  <p>
-  <label for="inputImage">ProfileImage</label>
-  <%= f.file_field :image, accept: "image/*" %>  
-  </p>
-  <p>
-  <label for="inputIntroduction">Introduction</label>
-  <%= f.text_area :introduction, autofocus: true, id:"inputIntroduction"%>
-  </p>
- <p><%= f.submit "Update User" %></p>
-<% end %>
+    
+    <%= form_with model: @user do |f| %>
+    　<p>
+      <label for="inputName">Name</label>
+      <%= f.text_field :name, autofocus: true, id:"inputName"%>
+      </p>
+      <p>
+      <label for="inputImage">ProfileImage</label>
+      <%= f.file_field :image, accept: "image/*" %>  
+      </p>
+      <p>
+      <label for="inputIntroduction">Introduction</label>
+      <%= f.text_area :introduction, autofocus: true, id:"inputIntroduction"%>
+      </p>
+     <p><%= f.submit "Update User" %></p>
+    <% end %>
+  </main>
+  <footer>
+    <div class="container mt-5">
+     <div class="row">
+      <div class="mx-auto">
+       <p>CopyRight Infratop.inc</p>
+      </div>
+     </div>
+    </div>
+  </footer>
+</body>
