--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -1,4 +1,7 @@
 users index(/users)
+<body>
+ <header></header>
+ <main>
 <!--左側ページ-->
 <!--テンプレートファイルを呼び出す-->
 <%= render 'books/list', user:@user %>
@@ -6,13 +9,45 @@ users index(/users)
 <!--右側ページ-->
 <!--全ユーザー情報-->
 <h1>Users</h1>
-<% @users.each do |user| %>
- <p>
- <%= image_tag user.get_image(100,100) %>
- </p>
- <h2>name</h2>
- <span><%= user.name %></span>
+<table>
+  <thead>
+    <tr>
+      <th>
+        image
+      </th>
+      <th>
+        name
+      </th>
+      <th colspan="1"></th>
+    </tr>
+  </thead>
   
-  <%=link_to "Show", user_path(user.id) %>
-  
-<% end %>
+  <tbody>
+  <% @users.each do |user| %>
+  <tr>
+   <td>
+   <%= image_tag user.get_image(100,100) %>
+   </td>
+   <td>
+    <%= user.name %>
+    </td>
+    <td>
+    <%=link_to "Show", user_path(user.id) %>
+    </td>
+   </tr>
+  <% end %>
+ </tbody>
+<table>
+ 
+ </main>
+ <footer>
+  <div class="container mt-5">
+   <div class="row">
+    <div class="mx-auto">
+     <p>CopyRight Infratop.inc</p>
+    </div>
+   </div>
+  </div>
+ </footer>
+ 
+ </body>
