--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,43 +1,59 @@
 users show(/users/id)
-<!--ログインと新規登録成功のフラッシュメッセージ-->
-<div>
-  <%= flash[:notice] %>
-</div>
-<!--左側ページ-->
-<!--テンプレートファイルを呼び出す-->
-<%= render 'books/list', user:@user %>
+<body>
+  <header>
+    
+  </header>
+  <main>
+    <!--ログインと新規登録成功のフラッシュメッセージ-->
+    <div>
+      <%= flash[:notice] %>
+    </div>
+    <!--左側ページ-->
+    <!--テンプレートファイルを呼び出す-->
+    <%= render 'books/list', user:@user %>
+    
+    <!--右側ページ-->
+    <!--そのユーザーの投稿履歴-->
+    <h1>Books</h1>
+    <table>
+      <thead>
+        <tr>
+          <th colspan="1"></th>
+          <th>
+            title
+          </th>
+          <th>
+            body
+          </th>
+        </tr>
+      </thead>
+    
+      <tbody>
+        <% @books.each do |book| %>
+        <tr>
+          <td>
+          <%= image_tag @user.get_image(100,100) %>
+          </td>
+          <td>
+            <%= link_to book.title, book_path(book.id) %>
+            <!--遷移先はbooksのshowページ　/books/id-->
+          </td>
+          <td>
+            <%= book.body %>
+          </td>
+        </tr>
+        <% end %>
+      </tbody>
+    </table>
+  </main>
 
-<!--右側ページ-->
-<!--そのユーザーの投稿履歴-->
-<h1>Books</h1>
-<table>
-  <thead>
-    <tr>
-      <th colspan="1"></th>
-      <th>
-        title
-      </th>
-      <th>
-        body
-      </th>
-    </tr>
-  </thead>
-
-  <tbody>
-    <% @books.each do |book| %>
-    <tr>
-      <td>
-      <%= image_tag @user.get_image(100,100) %>
-      </td>
-      <td>
-        <%= link_to book.title, book_path(book.id) %>
-        <!--遷移先はbooksのshowページ　/books/id-->
-      </td>
-      <td>
-        <%= book.body %>
-      </td>
-    </tr>
-    <% end %>
-  </tbody>
-</table>
-
+  <footer>
+    <div class="container mt-5">
+     <div class="row">
+      <div class="mx-auto">
+       <p>CopyRight Infratop.inc</p>
+      </div>
+     </div>
+    </div>
+  </footer>
+</body>
