--- a/app/views/books/show.html.erb
+++ b/app/views/books/show.html.erb
@@ -38,15 +38,6 @@ books show(/books/book_id)
     <% end %>
    </span>
   </main>
-  
-  <footer>
-    <div class="container mt-5">
-     <div class="row">
-      <div class="mx-auto">
-       <p>CopyRight Infratop.inc</p>
-      </div>
-     </div>
-    </div>
-  </footer>
+  <!--フッターはapplication.html.erbに-->
 </body>
  
