--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -40,14 +40,5 @@ users index(/users)
 <table>
  
  </main>
- <footer>
-  <div class="container mt-5">
-   <div class="row">
-    <div class="mx-auto">
-     <p>CopyRight Infratop.inc</p>
-    </div>
-   </div>
-  </div>
- </footer>
- 
+ <!--フッターはapplication.html.erbに-->
  </body>
