--- a/app/views/books/edit.html.erb
+++ b/app/views/books/edit.html.erb
@@ -32,14 +32,5 @@ books edit(/books/book_id/edit
     <%= link_to 'Show', book_path %>
     <%= link_to 'Back', books_path %>
   </main>
-
-  <footer>
-    <div class="container mt-5">
-     <div class="row">
-      <div class="mx-auto">
-       <p>CopyRight Infratop.inc</p>
-      </div>
-     </div>
-    </div>
-  </footer>
+<!--フッターはapplication.html.erbに-->
 </body>
