--- a/app/views/books/index.html.erb
+++ b/app/views/books/index.html.erb
@@ -49,14 +49,5 @@ books index(/books)
     </tbody>
   </table>
   </main>
-
-  <footer>
-    <div class="container mt-5">
-     <div class="row">
-      <div class="mx-auto">
-       <p>CopyRight Infratop.inc</p>
-      </div>
-     </div>
-    </div>
-   </footer>
+<!--フッターはapplication.html.erbに-->
  </body>
