--- a/app/views/users/edit.html.erb
+++ b/app/views/users/edit.html.erb
@@ -31,13 +31,5 @@ users edit(users/id/edit)
      <p><%= f.submit "Update User" %></p>
     <% end %>
   </main>
-  <footer>
-    <div class="container mt-5">
-     <div class="row">
-      <div class="mx-auto">
-       <p>CopyRight Infratop.inc</p>
-      </div>
-     </div>
-    </div>
-  </footer>
+  <!--フッターはapplication.html.erbに-->
 </body>
