--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -46,14 +46,5 @@ users show(/users/id)
       </tbody>
     </table>
   </main>
-
-  <footer>
-    <div class="container mt-5">
-     <div class="row">
-      <div class="mx-auto">
-       <p>CopyRight Infratop.inc</p>
-      </div>
-     </div>
-    </div>
-  </footer>
+<!--フッターはapplication.html.erbに-->
 </body>
