--- a/app/views/books/index.html.erb
+++ b/app/views/books/index.html.erb
@@ -35,7 +35,7 @@ books index(/books)
       <% @books.each do |book| %>
       <tr>
         <td>
-        <%= image_tag book.user.get_image(100,100) %>
+        <%= image_tag book.user.get_profile_image(100,100) %>
         </td>
         <td>
           <%= link_to book.title, book_path(book.id) %>
