--- a/app/views/books/show.html.erb
+++ b/app/views/books/show.html.erb
@@ -15,7 +15,7 @@ books show(/books/book_id)
  <!--右側ページ-->
   <h1>Books</h1>
 
-  <p><%= image_tag @user.get_image(100,100) %></p>
+  <p><%= image_tag @user.get_profile_image(100,100) %></p>
 
   </p><%= link_to @user.name, user_path(@user.id) %></p>
 
