--- a/app/views/users/edit.html.erb
+++ b/app/views/users/edit.html.erb
@@ -22,7 +22,7 @@ users edit(users/id/edit)
       </p>
       <p>
       <label for="inputImage">ProfileImage</label>
-      <%= f.file_field :image, accept: "image/*" %>  
+      <%= f.file_field :profile_image, accept: "image/*" %>  
       </p>
       <p>
       <label for="inputIntroduction">Introduction</label>
