--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -26,7 +26,7 @@ users index(/users)
   <% @users.each do |user| %>
   <tr>
    <td>
-   <%= image_tag user.get_image(100,100) %>
+   <%= image_tag user.get_profile_image(100,100) %>
    </td>
    <td>
     <%= user.name %>
