--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -20,33 +20,41 @@
       
       <!--ログインしている場合-->
       <% if user_signed_in? %>
-        <li>
-          <%= link_to "Home", user_path(current_user) %>
-        </li>
-        <li>
-          <%= link_to "Users", users_path %>
-        </li>
-        <li>
-          <%= link_to "Books", books_path %>
-        </li>
-        <li>
-          <%= link_to "Log out", destroy_user_session_path, method: :delete %>
-        </li>
+      
+      <%= link_to user_path(current_user) do %>
+        <i class="fa-solid fa-house"></i>Home
+      <% end %>
+      
+      <%= link_to users_path do %>
+        <i class="fa-solid fa-users"></i>Users
+      <% end %>
+      
+       <%= link_to books_path do %>
+        <i class="fa-solid fa-book"></i>Books
+      <% end %>
+      
+      <%= link_to destroy_user_session_path, method: :delete do %>
+        <i class="fa-solid fa-right-from-bracket"></i>Log out
+      <% end %>
+        
       <% else %>
       <!--ログインしていない場合-->
-        <li>
-          <%= link_to "Home", root_path %>
-        </li>
-        <li>
-          <%= link_to "About", about_path %>
-          <!--homes_about_path-->
-        </li>
-        <li>
-          <%= link_to "Sign up", new_user_registration_path %>
-        </li>
-        <li>
-          <%= link_to "Log in ", new_user_session_path %>
-        </li>
+       <%= link_to root_path do %>
+        <i class="fa-solid fa-house"></i>Home
+       <% end %>
+        
+       <%= link_to about_path do %>
+         <i class="fa-solid fa-paperclip"></i>About
+       <% end %>
+        
+        <%= link_to new_user_registration_path do %>
+         <i class="fa-solid fa-user-plus"></i>Sign up
+        <% end %>
+        
+        <%= link_to new_user_session_path do %>
+         <i class="fa-solid fa-right-to-bracket"></i>Log in
+        <% end %>
+       
       <% end %>
       </div>
     </header>
