--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width,initial-scale=1">
     <%= csrf_meta_tags %>
     <%= csp_meta_tag %>
+     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
     
     <!--FontAwesomeの導入-->
     <script src="https://kit.fontawesome.com/79ea4db2fa.js" crossorigin="anonymous"></script>
@@ -15,6 +16,7 @@
 
   <body>
     <header>
+      <nav class="navbar navbar-expand-lg navbar-dark">
       <div class="container">
       <h1>Bookers</h1>
       
@@ -57,9 +59,11 @@
        
       <% end %>
       </div>
+      </nav>
     </header>
     
     <%= yield %>
+    
     <footer>
       <div class="container mt-5">
        <div class="row">
