--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,8 +1,5 @@
 users show(/users/id)
 <body>
-  <header>
-    
-  </header>
   <main>
     <!--ログインと新規登録成功のフラッシュメッセージ-->
     <div>
@@ -15,7 +12,7 @@ users show(/users/id)
     <!--右側ページ-->
     <!--そのユーザーの投稿履歴-->
     <h1>Books</h1>
-    <table>
+    <table class="table">
       <thead>
         <tr>
           <th colspan="1"></th>
