--- a/app/views/books/show.html.erb
+++ b/app/views/books/show.html.erb
@@ -1,14 +1,24 @@
 books show(/books/book_id)
 <body>
  <main>
+  <div class="container">
+   <div class="row">
+   
+    <div class="col-md-3">
+ 
  <!--新規投稿成功、投稿更新成功フラッシュメッセージ-->
-  <div>
-   <%= flash[:notice] %>
-  </div>
- <!--左側ページ-->
- <!--テンプレートファイルを呼び出す-->
-  <%= render 'list', user:@user %>
-
+     <div>
+      <%= flash[:notice] %>
+     </div>
+    
+    <!--左側ページ-->
+    <!--テンプレートファイルを呼び出す-->
+     <%= render 'list', user:@user %>
+    </div>
+    <!--左ページと右ページの隙間-->
+    <div class="offset-md-1"></div>
+ 
+ <div class="col-md-8">
  <!--右側ページ-->
  
   <h1>Books</h1>
@@ -44,6 +54,9 @@ books show(/books/book_id)
     </tr>
    </tbody>
   </table>
+  </div>
+  </div>
+  </div>
  </main>
   <!--フッターはapplication.html.erbに-->
 </body>
