--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -1,43 +1,54 @@
 users index(/users)
 <body>
  <main>
+  <div class="container">
+   <div class="row">
+   
+    <div class="col-md-3">
 <!--左側ページ-->
 <!--テンプレートファイルを呼び出す-->
-<%= render 'books/list', user:@user %>
-
+     <%= render 'books/list', user:@user %>
+    </div>
+    
+    <!--左ページと右ページの隙間-->
+    <div class="offset-md-1"></div>
+    
+    <div class="col-md-8">
 <!--右側ページ-->
 <!--全ユーザー情報-->
- <h1>Users</h1>
-  <table class="table">
-   <thead>
-    <tr>
-      <th>
-        image
-      </th>
-      <th>
-        name
-      </th>
-      <th colspan="1"></th>
-    </tr>
-   </thead>
+     <h1>Users</h1>
+     <table class="table">
+      <thead>
+       <tr>
+        <th>
+         image
+        </th>
+        <th>
+         name
+        </th>
+        <th colspan="1"></th>
+       </tr>
+      </thead>
   
-   <tbody>
-    <% @users.each do |user| %>
-     <tr>
-      <td>
-      <%= image_tag user.get_profile_image(100,100) %>
-      </td>
-      <td>
-      <%= user.name %>
-      </td>
-      <td>
-      <%=link_to "Show", user_path(user.id) %>
-      </td>
-      </tr>
-     <% end %>
-   </tbody>
-  <table>
- 
+      <tbody>
+       <% @users.each do |user| %>
+        <tr>
+         <td>
+          <%= image_tag user.get_profile_image(100,100) %>
+         </td>
+         <td>
+          <%= user.name %>
+         </td>
+         <td>
+          <%=link_to "Show", user_path(user.id) %>
+         </td>
+         </tr>
+       <% end %>
+      </tbody>
+     <table>
+    </div>
+   </div>
+  </div>
  </main>
  <!--フッターはapplication.html.erbに-->
 </body>
