--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,19 +1,28 @@
 users show(/users/id)
 <body>
   <main>
+   <div class="container">
+    <div class="row">
+   
+     <div class="col-md-3">
     <!--ログインと新規登録成功のフラッシュメッセージ-->
-    <div>
-      <%= flash[:notice] %>
-    </div>
+       <div>
+        <%= flash[:notice] %>
+       </div>
     <!--左側ページ-->
     <!--テンプレートファイルを呼び出す-->
-    <%= render 'books/list', user:@user %>
+       <%= render 'books/list', user:@user %>
+     </div>
     
+    <!--左ページと右ページの隙間-->
+    <div class="offset-md-1"></div>
+    
+     <div class="col-md-8">
     <!--右側ページ-->
     <!--そのユーザーの投稿履歴-->
-    <h1>Books</h1>
-    <table class="table">
-      <thead>
+      <h1>Books</h1>
+      <table class="table">
+       <thead>
         <tr>
           <th colspan="1"></th>
           <th>
@@ -23,9 +32,9 @@ users show(/users/id)
             body
           </th>
         </tr>
-      </thead>
+       </thead>
     
-      <tbody>
+       <tbody>
         <% @books.each do |book| %>
         <tr>
           <td>
@@ -40,8 +49,11 @@ users show(/users/id)
           </td>
         </tr>
         <% end %>
-      </tbody>
-    </table>
+       </tbody>
+      </table>
+     </div>
+    </div>
+   </div>
   </main>
 <!--フッターはapplication.html.erbに-->
 </body>
