--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -45,7 +45,7 @@ users index(/users)
          </tr>
        <% end %>
       </tbody>
-     <table>
+     </table>
     </div>
    </div>
   </div>
