--- a/app/views/homes/top.html.erb
+++ b/app/views/homes/top.html.erb
@@ -4,6 +4,7 @@
 </div>
 
 <h1>welcome to Bookers !!</h1>
+<i class="fa-solid fa-book"></i>
 <p>In Bookers,
 
 you can share and exchange your opinions , inpressions , and emotions<br>
