--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -18,7 +18,9 @@
     <header>
       <nav class="navbar navbar-expand-lg navbar-dark">
       <div class="container">
-      <h1>Bookers</h1>
+      <!--<h1>Bookers</h1>-->
+      <%= link_to "Bookers",root_path  %>
+        
       
       <!--ログインしている場合-->
       <% if user_signed_in? %>
