--- a/app/views/books/show.html.erb
+++ b/app/views/books/show.html.erb
@@ -22,7 +22,7 @@ books show(/books/book_id)
     <div class="col-md-8">
  <!--右側ページ-->
  
-     <h1>Books</h1>
+     <h1>Book detail</h1>
      <table class="table">
       <tbody>
        <tr>
