--- a/app/views/books/index.html.erb
+++ b/app/views/books/index.html.erb
@@ -40,7 +40,8 @@ books index(/books)
         <% @books.each do |book| %>
          <tr>
           <td>
-           <%= image_tag book.user.get_profile_image(100,100) %>
+           <%= image_tag book.user.get_profile_image(100,100)  %>
+           <%#= link_to image_tag book.user.get_profile_image(100,100) ,user_path(@user.id) %>
           </td>
           <td>
            <%= link_to book.title, book_path(book.id) %>
