--- a/app/views/books/index.html.erb
+++ b/app/views/books/index.html.erb
@@ -18,9 +18,9 @@ books index(/books)
       <%= render 'list', user: @user %>
      </div>
      <!--左ページと右ページの隙間-->
-     <div class="offset-md-1"></div>
+     <!--<div class="offset-md-1"></div>-->
      
-     <div class="col-md-8">
+     <div class="col-md-8 offset-md-1">
   <!--ここから右ページ-->
       <h1>Books</h1>
       <table class="table">
@@ -40,8 +40,12 @@ books index(/books)
         <% @books.each do |book| %>
          <tr>
           <td>
-           <%= image_tag book.user.get_profile_image(100,100)  %>
+           <%#= image_tag book.user.get_profile_image(100,100)  %>
            <%#= link_to image_tag book.user.get_profile_image(100,100) ,user_path(@user.id) %>
+           <%= link_to user_path(book.user_id) do %>
+            <%= image_tag book.user.get_profile_image(100,100)  %>
+           <% end %>
+           
           </td>
           <td>
            <%= link_to book.title, book_path(book.id) %>
