--- a/app/views/books/show.html.erb
+++ b/app/views/books/show.html.erb
@@ -17,9 +17,9 @@ books show(/books/book_id)
     </div>
     
     <!--左ページと右ページの隙間-->
-    <div class="offset-md-1"></div>
+    <!--<div class="offset-md-1"></div>-->
  
-    <div class="col-md-8">
+    <div class="col-md-8 offset-md-1">
  <!--右側ページ-->
  
      <h1>Book detail</h1>
