--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -34,7 +34,7 @@
       <% end %>
       
        <%= link_to books_path do %>
-        <i class="fa-solid fa-book"></i>Books
+        <i class="fas fa-book-open"></i>Books
       <% end %>
       
       <%= link_to destroy_user_session_path, method: :delete do %>
@@ -48,7 +48,7 @@
        <% end %>
         
        <%= link_to about_path do %>
-         <i class="fa-solid fa-paperclip"></i>About
+         <i class="fas fa-link"></i>About
        <% end %>
         
         <%= link_to new_user_registration_path do %>
