--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -11,9 +11,9 @@ users index(/users)
     </div>
     
     <!--左ページと右ページの隙間-->
-    <div class="offset-md-1"></div>
+    <!--<div class="offset-md-1"></div>-->
     
-    <div class="col-md-8">
+    <div class="col-md-8 offset-md-1">
 <!--右側ページ-->
 <!--全ユーザー情報-->
      <h1>Users</h1>
