--- a/app/views/books/_list.html.erb
+++ b/app/views/books/_list.html.erb
@@ -14,7 +14,7 @@
 <h4>introduction</h4>
 <p><%= user.introduction %></p>
 
-<%= link_to edit_user_path(current_user.id) do %>
+<%= link_to edit_user_path(user.id) do %>
  <i class="fa-solid fa-user-gear"></i>
 <% end %> 
 
